# Cplusplus-chess

./: ASSESSMENT.md  README.md  SOLUTION.md
src/: CMakeLists.txt
src/chess/: Chessboard.cpp  Chessboard.h  Chessman.cpp  Chessman.h  Figure.cpp  Figure.h  main.cpp
